# Dungeon-Crawler-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/Audio/: SoundManager.h
include/Core/: Config.h  Game.h  SaveSystem.h
include/Entities/: Character.h  Enemy.h  Player.h
include/Systems/: CombatSystem.h  CompanionSystem.h  EffectSystem.h  InventorySystem.h  ItemSystem.h  MapGenerator.h  ParticleSystem.h  PotionSystem.h  WeaponSystem.h
include/UI/: HUD.h  MainMenu.h
src/Audio/: SoundManager.cpp
src/Core/: Game.cpp  SaveSystem.cpp
src/Entities/: Character.cpp  Enemy.cpp  Player.cpp
src/Systems/: CombatSystem.cpp  CompanionSystem.cpp  EffectSystem.cpp  InventorySystem.cpp  ItemSystem.cpp  MapGenerator.cpp  ParticleSystem.cpp  PotionSystem.cpp  WeaponSystem.cpp
src/UI/: HUD.cpp  MainMenu.cpp
web_dashboard/: index.html  script.js  style.css
